# kube-resource-report

./: .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: deployment.yaml
kube_resource_report/: cluster_discovery.py  query.py  report.py
tests/: conftest.py
